--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <img src="img/img-profile.jpg" class="img-responsive" alt=""/>
         </div>
         <div class="content">
-            <h1>Leon Weiß</h1>
+            <h1>Luisa Sanchez </h1>
             <span class="lead">Marketing Consultant</span>
 
             <div class="about-text">
