--- a/index.html
+++ b/index.html
@@ -45,9 +45,8 @@
             <img src="img/img-profile.jpg" class="img-responsive" alt=""/>
         </div>
         <div class="content">
-            <h1>Luisa Sanchez </h1>
-            <span class="lead">Marketing Consultant</span>
-
+            <h1>LUISA SANCHEZ </h1>
+            <span class="lead"> Abogada - Asistente en Analisis de Desarrollo de Software </span>
             <div class="about-text">
                 <p>
                     Credibly embrace visionary internal or "organic" sources and business benefits. Collaboratively
