--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
             <span class="lead"> Abogada - Asistente en Analisis de Desarrollo de Software </span>
             <div class="about-text">
                 <p>
-                    Credibly embrace visionary internal or "organic" sources and business benefits. Collaboratively
-                    integrate efficient portals rather than customized customer service. Assertively deliver
-                    frictionless services via leveraged interfaces. Conveniently evisculate accurate sources and
-                    process-centric expertise.
+                    Abogada especialista en derecho procesal capacitada para desempeñar diferentes roles en el entorno tanto como asesora,
+                    funcionaria pública o empleada de la Rama Judicial. 
+                    Con capacidades de trabajar en equipo y así alcanzar metas trazadas. 
+                                  
                 </p>
 
-                <p>Energistically fabricate customized imperatives through cooperative catalysts for change.</p>
+                <p>Estudiante de Ingenieria de Sistemas y con conocimientos en el analisis y desarrollo de Software.</p>
 
 
                 <p><img src="img/Signature.png" alt="" class="img-responsive"/></p>
