--- a/index.html
+++ b/index.html
@@ -269,34 +269,34 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
-                <div class="section-title"><h2>Education</h2></div>
+                <div class="section-title"><h2>FORMACIÓN ACADÉMICA</h2></div>
             </div>
         </div>
         <!--.row-->
         <div class="row">
             <div class="col-md-12">
                 <div class="content-item">
-                    <small>2010 - 2012</small>
-                    <h3>MA Product Design</h3>
-                    <h4>University of California</h4>
+                    <small>2009 - 2015</small>
+                    <h3>Abogada</h3>
+                    <h4>Universidad de Antioquia</h4>
 
-                    <p>United Kingdom, London</p>
+                    <p>Medellín,Antioquia</p>
                 </div>
                 <!-- .experience-item -->
                 <div class="content-item">
                     <small>2007 - 2010</small>
-                    <h3>Business marketing course</h3>
-                    <h4>Royal Academy of Business</h4>
+                    <h3>Especialización en Derecho Procesal Contemporáneo</h3>
+                    <h4>Universidad de Medellín</h4>
 
-                    <p>United Kingdom, London</p>
+                    <p>Medellín,Antioquia</p>
                 </div>
                 <!-- .experience-item -->
                 <div class="content-item">
-                    <small>2002 - 2006</small>
-                    <h3>BA (Hons) Design</h3>
-                    <h4>University of Michigan</h4>
+                    <small>2018</small>
+                    <h3>Asistente en análisis y desarrollo de software </h3>
+                    <h4>Centro de Sistemas de Antioquia (CENSA)</h4>
 
-                    <p>United Kingdom, London</p>
+                    <p>Medellín,Antioquia</p>
                 </div>
                 <!-- .experience-item -->
             </div>
