--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
-                <div class="section-title"><h2>Work Experience</h2></div>
+                <div class="section-title"><h2>EXPERIENCIA LABORAL</h2></div>
             </div>
         </div>
         <!--.row-->
@@ -234,26 +234,26 @@
             <div class="col-md-12">
                 <div class="content-item">
                     <small>2015 - Present</small>
-                    <h3>Head of market research</h3>
-                    <h4>Computer & Motor Ltd.</h4>
+                    <h3>Funcionaria Pública</h3>
+                    <h4>Rama Judicial</h4>
 
-                    <p>United Kingdom, London</p>
+                    <p>Medellín, Antioquia </p>
                 </div>
                 <!-- .experience-item -->
                 <div class="content-item">
-                    <small>2012 - 2015</small>
-                    <h3>Media Analyst</h3>
-                    <h4>BizzNiss</h4>
+                    <small>2014 - 2015</small>
+                    <h3>Monitora</h3>
+                    <h4>Centro de Conciliación de la Universidad de Antioquia</h4>
 
-                    <p>United Kingdom, London</p>
+                    <p>Medellín, Antioquia </p>
                 </div>
                 <!-- .experience-item -->
                 <div class="content-item">
-                    <small>2010 - 2012</small>
-                    <h3>Budget Administrator</h3>
-                    <h4>Somsom LLC</h4>
+                    <small>2012</small>
+                    <h3>Administrador del Portal Web de la Sección de Medios</h3>
+                    <h4>Facultad de Educación de la Universidad de Antioquia</h4>
 
-                    <p>United Kingdom, London</p>
+                    <p>Medellín, Antioquian</p>
                 </div>
                 <!-- .experience-item -->
             </div>
@@ -284,7 +284,7 @@
                 </div>
                 <!-- .experience-item -->
                 <div class="content-item">
-                    <small>2007 - 2010</small>
+                    <small>2019</small>
                     <h3>Especialización en Derecho Procesal Contemporáneo</h3>
                     <h4>Universidad de Medellín</h4>
 
