--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="section-title">
-                    <h2>Skills</h2>
+                    <h2>HABILIDADES</h2>
                 </div>
             </div>
 
@@ -152,7 +152,7 @@
                 <div class="progress-wrapper">
 
                     <div class="progress-item">
-                        <span class="progress-title">Marketing</span>
+                        <span class="progress-title">Gestión de Procesos Penales</span>
 
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="62" aria-valuemin="0"
@@ -165,7 +165,7 @@
 
 
                     <div class="progress-item">
-                        <span class="progress-title">Market Research</span>
+                        <span class="progress-title">Gestión de Procesos Constitucionales</span>
 
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
@@ -178,7 +178,7 @@
 
 
                     <div class="progress-item">
-                        <span class="progress-title">Organisational Skills</span>
+                        <span class="progress-title">Habilidades de Organización</span>
 
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
@@ -190,22 +190,22 @@
                     <!-- /.skill-progress -->
 
                     <div class="progress-item">
-                        <span class="progress-title">Communtcation Skills</span>
+                        <span class="progress-title">Habilidades de Comunicación y Redacción</span>
 
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0"
-                                 aria-valuemax="100" style="width: 55%;"><span class="progress-percent"> 55%</span>
+                            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0"
+                                 aria-valuemax="100" style="width: 85%;"><span class="progress-percent"> 85%</span>
                             </div>
                         </div>
                         <!-- /.progress -->
                     </div>
                     <!-- /.skill-progress -->
                     <div class="progress-item">
-                        <span class="progress-title">Project Management</span>
+                        <span class="progress-title">Gestion de Proyectos</span>
 
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0"
-                                 aria-valuemax="100" style="width: 80%;"><span class="progress-percent"> 80%</span>
+                                 aria-valuemax="100" style="width: 55%;"><span class="progress-percent"> 55%</span>
                             </div>
                         </div>
                         <!-- .progress -->
@@ -233,7 +233,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="content-item">
-                    <small>2015 - Present</small>
+                    <small>2015 - Actualidad</small>
                     <h3>Funcionaria Pública</h3>
                     <h4>Rama Judicial</h4>
 
@@ -253,7 +253,7 @@
                     <h3>Administrador del Portal Web de la Sección de Medios</h3>
                     <h4>Facultad de Educación de la Universidad de Antioquia</h4>
 
-                    <p>Medellín, Antioquian</p>
+                    <p>Medellín, Antioquia</p>
                 </div>
                 <!-- .experience-item -->
             </div>
