--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="section-title">
-                    <h2>Contact</h2>
+                    <h2>Datos de Contacto</h2>
                 </div>
             </div>
         </div>
@@ -437,25 +437,19 @@
         <div class="row">
             <div class="col-md-12">
                 <address>
-                    <strong>Address</strong><br>
-                    1355 Market Street, Suite 900<br>
-                    San Francisco, CA 94103
-
+                    <strong>Dirección</strong><br>
+                    Calle 49 No. 20B - 27 Buenos Aires<br>
+                    Medellín, Antioquia
                 </address>
                 <address>
-                    <strong>Phone Number</strong><br>
-                    +61 3 8376 6284
-                </address>
-
-                <address>
-                    <strong>Mobile Number</strong><br>
-                    987 654 321
+                    <strong>Celular</strong><br>
+                    3147996133
                 </address>
 
 
                 <address>
                     <strong>Email</strong><br>
-                    <a href="mailto:#">coffee@amelie.me</a>
+                    <a href="luisam.sanchez.91@outlook.com</a>
                 </address>
             </div>
         </div>
@@ -463,26 +457,26 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="feedback-form">
-                    <h2>Get in touch</h2>
+                    <h2>Contáctame</h2>
 
                     <form id="contactForm" action="sendemail.php" method="POST">
                         <div class="form-group">
-                            <label for="InputName">Name</label>
+                            <label for="InputName">Nombre</label>
                             <input type="text" name="name" required="" class="form-control" id="InputName"
                                    placeholder="Full Name">
                         </div>
                         <div class="form-group">
-                            <label for="InputEmail">Email address</label>
+                            <label for="InputEmail">Correo Electrónico</label>
                             <input type="email" name="email" required="" class="form-control" id="InputEmail"
                                    placeholder="Email">
                         </div>
                         <div class="form-group">
-                            <label for="InputSubject">Subject</label>
+                            <label for="InputSubject">Asunto</label>
                             <input type="text" name="subject" class="form-control" id="InputSubject"
                                    placeholder="Subject">
                         </div>
                         <div class="form-group">
-                            <label for="message-text" class="control-label">Message</label>
+                            <label for="message-text" class="control-label">Mensaje</label>
                             <textarea class="form-control" rows="4" required="" name="message" id="message-text"
                                       placeholder="Write message"></textarea>
                         </div>
