--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                 <!-- .experience-item -->
                 <div class="content-item">
                     <small>2018</small>
-                    <h3>Asistente en análisis y desarrollo de software </h3>
+                    <h3>Tecnica Laboral en Asistente en análisis y desarrollo de software </h3>
                     <h4>Centro de Sistemas de Antioquia (CENSA)</h4>
 
                     <p>Medellín,Antioquia</p>
@@ -449,7 +449,7 @@
 
                 <address>
                     <strong>Email</strong><br>
-                    <a href="luisam.sanchez.91@outlook.com</a>
+                    <a href="luisam.sanchez.91@outlook.com"</a>
                 </address>
             </div>
         </div>
